Fix content placeholder overflow Android bug.

--- a/layout/default/css/contentPlaceholder.less
+++ b/layout/default/css/contentPlaceholder.less
@@ -16,6 +16,7 @@
     width: 100%;
     height: 100%;
     background-color: @colorBgBody;
+    overflow: hidden;//Fix for Android 4.1-4.3
   }
 
   &.stretch {
